--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-intersection-observer": "^9.4.0",
@@ -17,6 +19,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.5.5",
+    "react-use-gesture": "^9.1.3",
     "recoil": "^0.7.5",
     "recoil-persist": "^4.2.0",
     "slick-carousel": "^1.8.1",
