--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.6",
     "react-spring": "^9.5.5",
     "react-use-gesture": "^9.1.3",
     "recoil": "^0.7.5",
