--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "highcharts": "^10.2.1",
     "highcharts-react-official": "^3.1.0",
     "immutable": "^4.1.0",
+    "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dnd": "^16.0.1",
